objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Adresse_Email_Personnelle__c</fullName>
        <label>Email Personnel</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Adresse_Personnelle_Ligne_2__c</fullName>
        <label>Adresse Personnelle: Ligne 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_Personnelle_Ligne_3__c</fullName>
        <label>Adresse Personnelle: Ligne 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_Personnelle_Pays_WF__c</fullName>
        <formula>IF(  Pays__r.Name  &lt;&gt; &quot;&quot;,  Pays__r.Name , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adresse Personnelle:Pays WF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_R_gion__c</fullName>
        <formula>IF(  D_partement__c  &lt;&gt; Null,   D_partement__r.R_gion__c   , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adresse: Règion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_Repli_Rue__c</fullName>
        <label>Adresse de Repli: Rue</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_Rue__c</fullName>
        <label>Adresse: Rue</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_Ville__c</fullName>
        <label>Adresse: Ville</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_code_postal__c</fullName>
        <label>Adresse: code postal</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_de_Repli_Pays_WF__c</fullName>
        <formula>IF(  Adresse_de_repli_Pays__r.Name  &lt;&gt; &quot;&quot;, Adresse_de_repli_Pays__r.Name , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adresse de Repli:Pays WF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_de_repli_Etat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adresse de repli: Etat</label>
        <referenceTo>Etat__c</referenceTo>
        <relationshipLabel>Contacts (Adresse de repli: Etat)</relationshipLabel>
        <relationshipName>Contacts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adresse_de_repli_Ligne_2__c</fullName>
        <label>Adresse de repli: Ligne 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_de_repli_Ligne_3__c</fullName>
        <label>Adresse de repli: Ligne 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_de_repli_Pays__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adresse de repli: Pays</label>
        <referenceTo>Pays__c</referenceTo>
        <relationshipLabel>Contacts (Adresse de repli: Pays)</relationshipLabel>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adresse_de_repli_code_postal__c</fullName>
        <label>Adresse de repli: code postal</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_de_repli_ville__c</fullName>
        <label>Adresse de repli: ville</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR(TODAY()) - YEAR( Birthdate ) -
IF(
       OR (
                  MONTH(TODAY()) &lt; MONTH(Birthdate),
                  AND(
                      MONTH(TODAY()) == MONTH(Birthdate),
                      DAY(TODAY()) &lt; DAY(Birthdate)
                    )
        ),
        1,
        0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ann_e_donation__c</fullName>
        <label>Année donation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ann_e_du_dipl_me__c</fullName>
        <label>Année du diplôme</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anniversaire_dans_les_30_jours__c</fullName>
        <formula>AND( 
TODAY()&gt;=(DATE(YEAR(TODAY()),MONTH(Birthdate),DAY(Birthdate))-30), 
TODAY()&lt;=DATE(YEAR(TODAY()),MONTH(Birthdate),DAY(Birthdate)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anniversaire dans les 30 jours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appliquer_l_e_mail_EM_Lyon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appliquer l&apos;e-mail EM Lyon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appliquer_l_e_mail_personnel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appliquer l&apos;e-mail personnel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appliquer_l_e_mail_professionnel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appliquer l&apos;e-mail professionnel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autres_formations__c</fullName>
        <label>Autres formations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>B_n_ficiaire_partenariat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bénéficiaire partenariat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cadre__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cadre</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cat_gorie_r_le__c</fullName>
        <label>Catégorie rôle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direction, institutions ou associations apparentées à EMLYON</fullName>
                </value>
                <value>
                    <fullName>Dirigeants Entreprises</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Centre_d_int_r_t_Fundraising__c</fullName>
        <label>Centre d&apos;intérêt Fundraising</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Savoir</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Centre_d_int_r_t__c</fullName>
        <label>Centre d&apos;interêts</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sport</fullName>
                </value>
                <value>
                    <fullName>Culture</fullName>
                </value>
                <value>
                    <fullName>Loisirs au sens large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code_Fonction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Code Fonction</label>
        <referenceTo>Fonction__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_Participant__c</fullName>
        <description>Ce champ est remplit automatiquement depuis le champ &quot;compteur tiers participant&quot;</description>
        <label>Code Participant</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Code_tiers_contact__c</fullName>
        <description>Ce champ est automatiquement remplit par workflow depuis compteur contact</description>
        <label>Code tiers contact</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Commentaire__c</fullName>
        <label>Commentaire</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaire_du_contact__c</fullName>
        <label>Commentaire du contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compl_ment_R_le__c</fullName>
        <label>Complément Rôle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Animateur atelier</fullName>
                </value>
                <value>
                    <fullName>Conférence</fullName>
                </value>
                <value>
                    <fullName>Groupe</fullName>
                </value>
                <value>
                    <fullName>Bilan d&apos;orientation</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
                <value>
                    <fullName>Animateur événements/inscriptions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compteur_Tiers_Contact__c</fullName>
        <description>Compteur automatique tiers contact ( remplit automatiquement le champ Code tiers contact)</description>
        <displayFormat>8{000000}</displayFormat>
        <label>Compteur Tiers Contact</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Compteur_Tiers_Participant__c</fullName>
        <description>Compteur pour les tiers &quot;Participant&quot; qui remplit automatiquement le champ &quot;code tiers participant&quot;</description>
        <displayFormat>7{000000}</displayFormat>
        <label>Compteur Tiers Participant</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Confidentiel_annuaire_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confidentiel annuaire Web</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confidentiel_annuaire_papier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confidentiel annuaire papier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_par_prestataire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contacté par prestataire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contexte_premier_contact__c</fullName>
        <label>Contexte premier contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Agent commercial</fullName>
                </value>
                <value>
                    <fullName>Articles de Presse</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
                <value>
                    <fullName>Bouche à oreille</fullName>
                </value>
                <value>
                    <fullName>Classements</fullName>
                </value>
                <value>
                    <fullName>Diplômés</fullName>
                </value>
                <value>
                    <fullName>Directories/ Guides</fullName>
                </value>
                <value>
                    <fullName>Display/ Banner</fullName>
                </value>
                <value>
                    <fullName>Emailing</fullName>
                </value>
                <value>
                    <fullName>Evènements/ Conférences</fullName>
                </value>
                <value>
                    <fullName>Forum/salon</fullName>
                </value>
                <value>
                    <fullName>Mailing (papier)</fullName>
                </value>
                <value>
                    <fullName>Parents</fullName>
                </value>
                <value>
                    <fullName>Prescripteurs</fullName>
                </value>
                <value>
                    <fullName>Publicité papier</fullName>
                </value>
                <value>
                    <fullName>Réputation</fullName>
                </value>
                <value>
                    <fullName>Réseaux sociaux</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conversion_Contact__c</fullName>
        <description>Ce champ permet d&apos;indiquer quel type d&apos;enregistrement sera appliqué pour le contact lors de la conversion</description>
        <label>Conversion Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect Etudiant</fullName>
                </value>
                <value>
                    <fullName>Etudiant</fullName>
                </value>
                <value>
                    <fullName>Professionnel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountryName__c</fullName>
        <formula>Pays__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pays du compte</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_c_d__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Décédé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>D_partement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adresse: Département</label>
        <referenceTo>D_partement__c</referenceTo>
        <relationshipLabel>Contacts (Département)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>D_tail_canal_d_acquisition__c</fullName>
        <inlineHelpText>précise un sous canal de la fiche piste dans le système</inlineHelpText>
        <label>Détail canal d&apos;acquisition</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Loader_Util__c</fullName>
        <description>Ce champ sert pour simuler des màj depuis Data Loader, ceci afin d&apos;affecter la valeur du champ Date de Mise à Jour</description>
        <inlineHelpText>Ce champ sert pour simuler des màj depuis Data Loader, ceci afin d&apos;affecter la valeur du champ Date de Mise à Jour</inlineHelpText>
        <label>Data Loader Util</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Modification_Fiche__c</fullName>
        <label>Date Modification Fiche</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_cr_ation_Dynamics__c</fullName>
        <label>Date création Dynamics</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_de_Cr_ation_de_la_fiche__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date de Création de la fiche</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_de_cotisation__c</fullName>
        <label>Date de cotisation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_cr_ation_contact__c</fullName>
        <label>Date de création contact</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_de_d_but__c</fullName>
        <label>Date de début</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_fin__c</fullName>
        <label>Date de fin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_traitement_t_l_conseiller__c</fullName>
        <label>Date de traitement téléconseiller</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demandeur_d_emploi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demandeur d&apos;emploi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Derni_re_fonction__c</fullName>
        <label>Dernière fonction</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dernier_dipl_me_ou_en_cours__c</fullName>
        <label>Dernier diplôme (ou en cours)</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dipl_m__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diplômé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diplome_echoue__c</fullName>
        <label>Diplôme échoué</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domaine__c</fullName>
        <label>Domaine d&apos;études</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Autre</fullName>
                </value>
                <value>
                    <fullName>Bac ES (économique et sociale)</fullName>
                </value>
                <value>
                    <fullName>Bac L (littéraire)</fullName>
                </value>
                <value>
                    <fullName>Bac S (scientifique)</fullName>
                </value>
                <value>
                    <fullName>Bac STMG</fullName>
                </value>
                <value>
                    <fullName>Droit</fullName>
                </value>
                <value>
                    <fullName>Ecole de commerce française</fullName>
                </value>
                <value>
                    <fullName>Economie</fullName>
                </value>
                <value>
                    <fullName>Gestion</fullName>
                </value>
                <value>
                    <fullName>Ingénieur</fullName>
                </value>
                <value>
                    <fullName>Santé (pharmacie, vétérinaire,…)</fullName>
                </value>
                <value>
                    <fullName>Sciences (mathématiques, physique,...)</fullName>
                </value>
                <value>
                    <fullName>Sciences humaines (lettres,...)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Donateur_prospect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Donateur prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_EM_Lyon__c</fullName>
        <label>Email EM Lyon</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Professionnel__c</fullName>
        <label>Email Professionnel(ne pas utilisé)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_de_repli__c</fullName>
        <label>Email Professionnel</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entrepreneur__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entrepreneur</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entreprise_d_clar_e__c</fullName>
        <label>Entreprise déclarée</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Etablissement__c</fullName>
        <label>Etablissement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Etat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adresse: Etat</label>
        <referenceTo>Etat__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Evenements_reseau__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evénements réseau</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FORM_Is_FC__c</fullName>
        <formula>IF
(
    OR
    (
    TEXT(LeadSource) = &quot;Formation continue courte&quot;
    ,
    TEXT(LeadSource) = &quot;Formation continue indéterminée&quot;
    ,
    TEXT(LeadSource) = &quot;Formation continue longue&quot;
    ,
    TEXT(LeadSource) = &quot;Formation inra-entreprise&quot;
    )
,
true
,
false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FORM - Is FC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FORM_Is_FI__c</fullName>
        <formula>if
(
    OR
    (
    text(LeadSource) = &quot;Formation initiale BBA&quot;
    ,
    text(LeadSource) = &quot;Formation initiale masters&quot;
    )
,
true
,
false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FORM - Is FI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Famille_Fonction__c</fullName>
        <label>Famille Fonction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Autres</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Commercial/Ventes</fullName>
                </value>
                <value>
                    <fullName>Direction Générale</fullName>
                </value>
                <value>
                    <fullName>Enseignement/Education</fullName>
                </value>
                <value>
                    <fullName>Etud/Recherche/Dévelop/Qualité</fullName>
                </value>
                <value>
                    <fullName>Finance/Gest./Adminis./Juridi.</fullName>
                </value>
                <value>
                    <fullName>Marketing/Communication</fullName>
                </value>
                <value>
                    <fullName>Organisation/Systèmes d&apos;Informations</fullName>
                </value>
                <value>
                    <fullName>Production/Achats</fullName>
                </value>
                <value>
                    <fullName>Ressources Humaines/Formation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fan_Facebook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fan Facebook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fonction_principale__c</fullName>
        <label>Fonction principale</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fonctions__c</fullName>
        <label>Fonction codée</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Famille_Fonction__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Président(e)</fullName>
                </value>
                <value>
                    <fullName>Administrateur</fullName>
                </value>
                <value>
                    <fullName>Vice-Président</fullName>
                </value>
                <value>
                    <fullName>Président du Directoire</fullName>
                </value>
                <value>
                    <fullName>Conseiller du Président</fullName>
                </value>
                <value>
                    <fullName>Président Directeur Général</fullName>
                </value>
                <value>
                    <fullName>Directeur Général</fullName>
                </value>
                <value>
                    <fullName>Directeur Général Adjoint</fullName>
                </value>
                <value>
                    <fullName>Secrétaire Général</fullName>
                </value>
                <value>
                    <fullName>Directeur du Développement</fullName>
                </value>
                <value>
                    <fullName>Directeur Affaires Internationales</fullName>
                </value>
                <value>
                    <fullName>Fondé de Pouvoir</fullName>
                </value>
                <value>
                    <fullName>Dir. des Compensations Internationales</fullName>
                </value>
                <value>
                    <fullName>Directeur</fullName>
                </value>
                <value>
                    <fullName>Directeur Adjoint</fullName>
                </value>
                <value>
                    <fullName>Attaché de Direction</fullName>
                </value>
                <value>
                    <fullName>Directeur de Filiale</fullName>
                </value>
                <value>
                    <fullName>Directeur et Responsable d&apos;Etablissement</fullName>
                </value>
                <value>
                    <fullName>Associé</fullName>
                </value>
                <value>
                    <fullName>Gérant(e)</fullName>
                </value>
                <value>
                    <fullName>Directeur d&apos;Agence</fullName>
                </value>
                <value>
                    <fullName>Conseil Auprès de la DG</fullName>
                </value>
                <value>
                    <fullName>Directeur ou Conseil en Stratégie</fullName>
                </value>
                <value>
                    <fullName>Chargé de Mission</fullName>
                </value>
                <value>
                    <fullName>Directeur Technique</fullName>
                </value>
                <value>
                    <fullName>Responsable Technique</fullName>
                </value>
                <value>
                    <fullName>Cadre Technique</fullName>
                </value>
                <value>
                    <fullName>Personnel Technique</fullName>
                </value>
                <value>
                    <fullName>Cadre Logistique</fullName>
                </value>
                <value>
                    <fullName>Directeur  Logistique</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_FEG__c</fullName>
        <externalId>true</externalId>
        <label>ID FEG</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifiant_Etudiant__c</fullName>
        <label>Identifiant Etudiant</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifiant_dipl_m__c</fullName>
        <label>Identifiant diplômé</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incub_l_EMLyon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incubé à l&apos;EMLyon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Informations_carriere__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Informations carrière</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Informations_compl_mentaires__c</fullName>
        <label>Informations complémentaires</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Int_r_t_pour__c</fullName>
        <label>Intérêt pour</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Expert Panel</fullName>
                </value>
                <value>
                    <fullName>Conférence Carrière Etudiants</fullName>
                </value>
                <value>
                    <fullName>Mock interview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interaction_LinkedIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interaction LinkedIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lieu_de_naissance__c</fullName>
        <label>Lieu de naissance</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linkedin__c</fullName>
        <label>Linkedin</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Liste_r_le__c</fullName>
        <label>Liste rôle</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Cat_gorie_r_le__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Membre de l&apos;AG AESCRA</fullName>
                </value>
                <value>
                    <fullName>Membre  du CA de l&apos;AESCRA</fullName>
                </value>
                <value>
                    <fullName>membre conseil d&apos;administration Alliance</fullName>
                </value>
                <value>
                    <fullName>Membre Comex Fondation</fullName>
                </value>
                <value>
                    <fullName>Réseaux d&apos;accompagement créateurs d&apos;Eses</fullName>
                </value>
                <value>
                    <fullName>Membre Conseil Surveillance CDME</fullName>
                </value>
                <value>
                    <fullName>Membre Associés CCI</fullName>
                </value>
                <value>
                    <fullName>Membre Bureau Elus CCI</fullName>
                </value>
                <value>
                    <fullName>Membre Elus CCI</fullName>
                </value>
                <value>
                    <fullName>Membre Commision Enseignement CCI</fullName>
                </value>
                <value>
                    <fullName>Membre PRES</fullName>
                </value>
                <value>
                    <fullName>Membres CA ADEM LYON</fullName>
                </value>
                <value>
                    <fullName>Dirigeant du CAC 40</fullName>
                </value>
                <value>
                    <fullName>Dirigeant créateur</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Login__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Remplir avec l&apos;adresse email.</inlineHelpText>
        <label>Login</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Membre_EML_Connect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Membre EML Connect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membre_vie__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Membre à vie</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_professionnel__c</fullName>
        <label>Mobile professionnel</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NB_Opportunit_s_principales_en_cours__c</fullName>
        <label>NB Opportunités principales en cours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPAI_Personnel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NPAI Personnel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPAI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NPAI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>N_a_pas_obtenu_son_dipl_me_EMLYON__c</fullName>
        <defaultValue>false</defaultValue>
        <label>N&apos;a pas obtenu son diplôme EMLYON</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nationalit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nationalité</label>
        <referenceTo>Pays__c</referenceTo>
        <relationshipLabel>Contacts (Nationalité)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>